# kason

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  kason.c  kason.h  kason_internal.h  kason_schema.c  kason_schema.h
.github/workflows/: ci.yml
bench/: bench_external.cpp  bench_external.h  bench_external_parser.cpp  bench_kason.cpp  bench_lookup.h  bench_rss.h  bench_struct.h  build_and_run.sh  run_bench.sh
cmake/: kasonConfig.cmake.in
docs/: Doxyfile.in  api-guide.md  check-links.sh  check.sh  compatibility.md  generate.sh  index.md  tutorial.md
examples/: example_io.c  example_io.h  json_compact.c  json_format_common.c  json_format_common.h  json_pretty.c  json_to_yaml.c  regular.c  schema.c  schema_config.c  stream.c
tests/: build_and_run.sh  fuzz_kason.c  run_safety_tests.sh  test_conformance.c  test_fuzz_smoke.c  test_kason.c  test_safety.c  test_schema.c  test_stream.c
tests/conformance/invalid/: n_incomplete_escape.json  n_mismatched_container.json  n_single_quoted_string.json  n_unpaired_surrogate.json
tests/conformance/valid/: y_empty_string_and_key.json  y_nested.json  y_primitives.json  y_top_level_number.json  y_top_level_string.json  y_unicode.json  y_whitespace.json
